Beautified css, added center alignment to home text, add closing tags to footer, and fix communications post to communications file instead of index.php

--- a/series/our-censor-portal/assets/css/style.css
+++ b/series/our-censor-portal/assets/css/style.css
@@ -6,15 +6,15 @@ header, footer {
 }
 
 form {
-	position:relative;
-	left:15%;
+	position: relative;
+	left: 15%;
 }
 
 textarea {
 	width: 70%;
 	height: 200px;
-	box-shadow: 2px 2px 10px 2px rgba(0,0,0,0.2);
-    	border-radius: 5px;
+	box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.2);
+	border-radius: 5px;
 }
 
 .button {
@@ -35,24 +35,23 @@ nav ul {
 }
 
 nav ul a {
-
 	text-decoration: none;
 	font-weight: 700;
 	padding: 10px;
 	color: #fff;
 	font-size: 16px;
-
 }
 
 nav ul li {
-
 	position: relative;
 	float: left;
 }
 
-
-
 .events {
 	position: relative;
+	text-align: center;
+}
+
+#homeTitle {
 	text-align: center;
 }
